4166
(In r22514) closes SI-3477. type arguments that were inferred to be Nothing should be included in checkBounds. wonder why they weren't in the first place

note that all type parameters must be reported in error messages about failing type inference, but only type parameters that were inferred successfully should be substituted

the idea of mapping type parameter symbols to the corresponding type ref in order to make substitution the identity does not seem to work, leading to errors like:

        src/library/scala/collection/immutable/SortedMap.scala:38: error: type mismatch;
          found   : scala.collection.immutable.SortedMap[A,B(in method empty)]
          required: scala.collection.immutable.SortedMap[A,B(in trait SortedMap)]
           override def empty: SortedMap[A, B] = SortedMap.empty
                                                           ^

(I guess that's why they were retracted before, but that wasn't done consistently, leading to SI-3152 -- my first attempt at fixing the latter lead to this bug... I've assigned  SI-3152 to you Martin, as I can't decide how to fix it.)

review by odersky
